Shorten team names and fix some text overflow issues

--- a/src/dashboard/styles/globalStyles.scss
+++ b/src/dashboard/styles/globalStyles.scss
@@ -56,3 +56,7 @@ a {
 .text-right {
     text-align: right;
 }
+
+.wrap-anywhere {
+    overflow-wrap: anywhere;
+}
